DATE        AUTHOR      CHANGE
----------- ----------- -------------------------------------------------------
[1.2.0 released - 8.14.2007]===================================================
Jul-08-2007 patrick     Debug-enabled code linked against the release runtime
                        on Windows is now named the same as optimized code.
                        The debug DLLs are installed in the "debug"
                        subdirectory.
                        NEW VERSION: 1.1.10
Jun-27-2007 patrick     Changed the preprocessor identification of debug versus
                        optimized to look for SNX_DEBUG or JUGGLER_DEBUG
                        instead of _DEBUG (and SNX_OPT or JUGGLER_OPT instead
                        of _OPT).
                        NEW VERSION: 1.1.9
Jan-30-2007 patrick     Eliminated the need to set SNX_BASE_DIR on Windows to
                        run applications.
                        NEW VERSION: 1.1.8
Oct-01-2006 patrick     Updated for VPR 1.1.35.
                        NEW VERSION: 1.1.7
Aug-04-2006 dshipton    Use flagpoll for building against sonix instead of
                        sonix-config.
                        NEW VERSION: 1.1.6
Jul-12-2006 patrick     Changed the DLL name to include the version as part of
                        the base library name on Windows. Implemented automatic
                        linking of the Sonix library.
                        NEW VERSION: 1.1.5
Jun-25-2006 patrick     Added support for building universal binaries on Mac
                        OS X.
                        NEW VERSION: 1.1.4
May-24-2006 dshipton    Libraries and plugins fully versioned for parallel
                        installations.
                        NEW VERSION: 1.1.3
Aug-17-2005 patrickh    Removed the unused namespace snx::FileIO and all its
                        members.
                        NEW VERSION: 1.1.2
Jul-11-2005 patrickh    Updated to VPR 1.1.3.